--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ecommerce": "file:",
     "gsap": "^3.12.5",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
