--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "gsap": "^3.12.5",
     "pinia": "^2.2.6",
     "pocketbase": "^0.25.0",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
